2003-01-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* common/vlad.h :
	* common/list.h :
	* common/list.cpp :
	* main/Makefile.in :

	  - Added a simple linked-list structure (void *) for general use.

	* configure.ac :

	  - Took out silly lex/yacc testing. Let it fail in the build
	    process.

	* main/Makefile.in :
	* parser/Makefile.in :

	  - Converted build process to C++. Changed lex/yacc output src
	    to end in .cpp instead of .c.

	* main/vlad.c :

	  - Renamed to vlad.cpp.

2002-12-19  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile :
	* common/Makefile :
	* parser/Makefile :
	* main/Makefile :

	  - Removed makefiles and replaced them with a corresponding
	    Makefile.in to be generated by the configure script.

	* configure.ac :

	  - Added configure.ac to generate the configure script.

	* README :

	  - Updated README file to describe new build procedure.

2002-12-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :
	* scanner/scanner.l :

	  - Modified to implement changes described below.

	* docs/bnf.txt :

	  - Fixed bug in query statements that prevented transformations
	    with no paramaters to be queried.

	  - Simplified query rules.

	  - Changed as described below.

	* docs/lanspecs.txt :

	  - Now the if-clause of tranformation definitions are optional.

	  - Dropped the "trans" keyword as it is completely useless.

	* main/Makefile :
	* main/vlad.c :

	  - Added main file (borrowed from epilog).

	* common/Makefile :
	* common/vlad.h :

	  - Added a common header file (borrowed from epilog).

	* Makefile :

	  - Added common and main dirs.

	* parser/parser.y :
	* parser/scannel.l :

	  - Changes to implement the bnf changes below.

	* docs/bnf.txt :

	  - Added constraint statements.

	  - Improvements over old design. First/last parts and other stmt
	    rules no longer needed.

	* ChangeLog :

	  - Changelog started.
